修改测试提出的bug

--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -78,7 +78,7 @@
 								<div class="m-cont-box2">
 									<h4>顶部导航栏设置</h4>
 									<div>
-										<p class="m-pageset-btns">
+										<p class="topsize m-pageset-btns">
 											<button class="active" data-s=>标准</button>
 											<button>自定义</button>
 										</p>
@@ -97,7 +97,7 @@
 								<div class="m-cont-box2">
 									<h4>左侧导航栏设置</h4>
 									<div>
-										<p class="m-pageset-btns">
+										<p class="leftsize m-pageset-btns">
 											<button class="active">标准</button>
 											<button>自定义</button>
 										</p>
@@ -137,7 +137,7 @@
 							<div class="m-cont1">
 								<div class="m-set-navs">
 									<a href="javascript:;" class="active">顶部导航菜单</a>
-									<a href="javascript:;" class="leftMenuBtn">左边菜单</a>
+									<a href="javascript:;" class="leftMenuBtn">左侧边栏菜单</a>
 								</div>
 								<div class="m-set-navscont">
 									<div class="m-navscont0">
@@ -147,7 +147,7 @@
 											<input type="button" value="确定" id="head-text-btn" />
 										</div>
 										<div class="m-tcont-box2">
-											<h3>已添加顶部导航菜单<img src="../images/icon_sxp.png" alt="" id="clearTopMenu"/></h3>
+											<h3>已添加顶部导航菜单<img src="../images/icon_sxp.png" alt="" id="clearTopMenu" data-tip="清除顶部菜单" class="opt-tip"/></h3>
 											<ul class="top-menu-15">
 												<!--<li>
 													<span class="m-menu-tag">财务</span>
@@ -199,9 +199,7 @@
 										  </div>
 										  <div class="match-menu-box">
 										  	<ul id="match-tree" class="ztree"></ul>
-										  	<!--<div class="le-menu-tree">
-										  		
-										  	</div>-->
+										  	
 										  </div>
 										</div>
 									</div>
