--- a/html/preview.html
+++ b/html/preview.html
@@ -22,7 +22,7 @@
     <div class="chart-main-box">
         <div class="edit-content">
             <div class="m-html-mod-box">
-                <div class="m-html-mod0">
+                <div class="m-html-mod">
                     <div class="mn-header">
                         <a href="#" class="mn-logobox">
                             <img src="../images/mlogo.png" alt="" />
@@ -41,45 +41,6 @@
                         <!--主体区域-->
                     </div>
                 </div>
-                <div class="m-html-mod1">
-                    <div class="mn-header">
-                        <a href="#" class="mn-logobox">
-                            <img src="../images/mlogo.png" alt="" />
-                        </a>
-                        <p class="mn-headtxt"><!--小道科技欢迎您！--></p>
-                        <ul class="mn-menu clearfix">
-                            <!--<li class="active"><a href="javascript:;">财务</a></li>
-                            <li><a href="javascript:;">产品</a></li>
-                            <li><a href="javascript:;">运输</a></li>-->
-                        </ul>
-                    </div>
-                    <div class="mn-sider">
-                        <!--菜单-->
-                    </div>
-                    <div class="mn-htmlmain">
-                        <!--主体区域-->
-                    </div>
-                </div>
-                <div class="m-html-mod2">
-                    <div class="mn-header">
-                        <a href="#" class="mn-logobox">
-                            <img src="../images/mlogo.png" alt="" />
-                        </a>
-                        <p class="mn-headtxt">小道科技欢迎您！</p>
-                        <ul class="mn-menu clearfix">
-                            <li class="active"><a href="javascript:;">财务</a></li>
-                            <li><a href="javascript:;">产品</a></li>
-                            <li><a href="javascript:;">运输</a></li>
-                        </ul>
-                    </div>
-                    <div class="mn-sider">
-                        <!--菜单-->
-                    </div>
-                    <div class="mn-htmlmain">
-                        <!--主体区域-->
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
