--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -49,7 +49,7 @@
       var this_actionComp = '';
       var this_data = {};
       var onenv = true;
-      var $url = '';  //../xdbd-wf
+      var $url = '../xdbd-wf';  //../xdbd-wf
       console.log(this_onenv)
 
       if(this_onenv == 'dev') {
