修改测试提出的bug

--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -79,7 +79,7 @@
 									<h4>顶部导航栏设置</h4>
 									<div>
 										<p class="topsize m-pageset-btns">
-											<button class="active" data-s=>标准</button>
+											<button class="tbz-btn active">标准</button>
 											<button>自定义</button>
 										</p>
 										<div class="m-top-value m-pageset-param">
@@ -98,7 +98,7 @@
 									<h4>左侧导航栏设置</h4>
 									<div>
 										<p class="leftsize m-pageset-btns">
-											<button class="active">标准</button>
+											<button class="lbz-btn active">标准</button>
 											<button>自定义</button>
 										</p>
 										<div class="m-left-value m-pageset-param">
@@ -233,10 +233,10 @@
 			<div class="chart-main-box">
 				<div class="edit-content">
 					<div class="m-html-mod-box">
-						<div class="m-html-mod">
+						<div class="m-html-mod m-html-mod0">
 							<div class="mn-header">
 								<a href="#" class="mn-logobox">
-									<img src="../images/mlogo.png" alt="" />
+									<img src="../images/mlogo.png" alt=""/>
 								</a>
 								<p class="mn-headtxt">小道科技欢迎您！</p>
 								<ul class="mn-menu clearfix">
