--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -121,7 +121,7 @@
 											<input type="file" />
 											<a href="javascript:;" id="del-uploadimg-btn">删除</a>
 											<a href="javascript:;">点击上传</a>
-											<p>图片的尺寸为640*640，大小不超过1M</p>
+											<p>图片的大小不超过1M</p>
 										</form>
 									</div>
 								</div>
