--- a/html/stencilmanage.html
+++ b/html/stencilmanage.html
@@ -9,29 +9,21 @@
 </head>
 <body style="background:#f7f7f7">
     <div class="demand_top">
-        <div class="form_validator">
+        <!-- <div class="form_validator">
             <label>模板类型：</label>
             <select>
                 <option>全部</option>
                 <option>12</option>
                 <option>23</option>
             </select>
+        </div> -->
+         <div class="form_validator">
+            <label>模板名称：</label>
+            <input type="text" />
         </div>
         <div class="form_validator">
-            <label>行业：</label>
-            <select>
-                <option>全部</option>
-                <option>12</option>
-                <option>23</option>
-            </select>
-        </div>
-        <div class="form_validator">
-            <label>自定义：</label>
-            <select>
-                <option>全部</option>
-                <option>12</option>
-                <option>23</option>
-            </select>
+            <label>行业类型：</label>
+            <select class="trade_type"></select>
         </div>
         <div class="form_btn">搜索</div>
     </div>
