--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -77,7 +77,7 @@
         haveHead:true,
 //        headLabel:true,
         initLabelText:'流程图',
-        headBtns:["new","undo","redo","reload","print","save","preview","execute","saveCopy"],//如果haveHead=true，则定义HEAD区的按钮  "save",
+        headBtns:["new","undo","redo","reload","print","preview","execute","saveCopy"],//如果haveHead=true，则定义HEAD区的按钮  "save",
         haveTool:onenv,
         haveDashed:true,
         haveGroup:true,
@@ -99,7 +99,7 @@
         redo:"下一步",
         reload:"刷新",
         print:"打印",
-        save:"保存",
+        // save:"保存",
         preview:"浏览",
         execute:"执行",
         saveCopy:"另存为模板"
@@ -251,6 +251,8 @@
             success:function(data){
               if(data.code == 0) {
                 layer.msg("模板保存成功")
+              } else {
+                layer.msg(data.message)
               }
 
             }
@@ -576,6 +578,8 @@
             success:function(data){
               if(data.code == 0) {
                 layer.msg('上传成功')
+              } else {
+                layer.msg(data.message)
               }
             }
           });
@@ -595,6 +599,7 @@
               $('.saveActionComp').trigger('click');
             })
         }
+        //单个组件的删除
         function init_delace(id) {
           var delActionComp = {
           };
@@ -612,6 +617,8 @@
             success:function(data){
               if(data.code == 0) {
                 layer.msg('删除成功')
+              }else {
+                layer.msg(data.message)
               }
             },error:function(data){
               layer.msg(JSON.stringify(data))
