--- a/html/stencilmanage.html
+++ b/html/stencilmanage.html
@@ -19,13 +19,13 @@
         </div> -->
          <div class="form_validator">
             <label>模板名称：</label>
-            <input type="text" />
+            <input type="text" class="stencil_name"/>
         </div>
         <div class="form_validator">
             <label>行业类型：</label>
             <select class="trade_type"></select>
         </div>
-        <div class="form_btn">搜索</div>
+        <div class="form_btn" onclick="stencilSeek()">搜索</div>
     </div>
     <div class="demand_main">
         <dl class="new_demand" id="new_demand_btn">
