--- a/plugin/webJobStream/java/java.html
+++ b/plugin/webJobStream/java/java.html
@@ -5,7 +5,7 @@
     </tr>
     <tr>
         <td class="th">任务名称</td>
-        <td><input type="text" class="manage java_task" placeholder="请输入任务名称" /></td>
+        <td><input type="text" class="manage java_task" readonly="readonly"/></td>
     </tr>
     <tr>
         <td class="th">传入名称</td>
