--- a/plugin/webJobStream/shell/shell.html
+++ b/plugin/webJobStream/shell/shell.html
@@ -5,7 +5,7 @@
     </tr>
     <tr>
         <td class="th">任务名称</td>
-        <td><input type="text" class="manage shell_task" placeholder="请输入任务名称" /></td>
+        <td><input type="text" class="manage shell_task" readonly="readonly" /></td>
     </tr>
     <tr>
         <td class="th">文件路径</td>
