--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -97,7 +97,7 @@
         </div>
         <div class="fromInp" style="margin-top: 44px;">
             <label>步骤名称：</label>
-            <input type="text" class="stepName auto_save"/>
+            <input type="text" class="stepName auto_save" readonly="readonly"/>
         </div>
         <!--<div class="fromInp">-->
             <!--<label>输出表名：</label>-->
