--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -117,7 +117,7 @@
     </div>
     <div class="fromInp" style="margin-top: 44px;">
         <label>步骤名称：</label>
-        <input type="text" class="stepName auto_save"/>
+        <input type="text" class="stepName auto_save" readonly="readonly"/>
     </div>
     <div class="related_tit">提取字段:</div>
     <table class="related_tab" cellspacing="0">
