--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -250,7 +250,10 @@
             }),
             success:function(data){
               if(data.code == 0) {
-                layer.msg("模板保存成功")
+                layer.msg("模板保存成功");
+                setTimeout(function() {
+                    window.location.href = 'etlStencil.html';
+                },2000)
               } else {
                 layer.msg(data.message)
               }
