--- a/plugin/webContent/where/where.html
+++ b/plugin/webContent/where/where.html
@@ -134,7 +134,7 @@
 </div>
 <div class="fromInp" style="margin-top: 44px;">
     <label>步骤名称：</label>
-    <input type="text" class="stepName auto_save"/>
+    <input type="text" class="stepName auto_save" readonly="readonly"/>
 </div>
 <div class="fromInp">
     <label>表输出：</label>
