--- a/plugin/webContent/groups/groups.html
+++ b/plugin/webContent/groups/groups.html
@@ -193,8 +193,8 @@
             <th>函数</th>
         </tr>
         </thead>
-        <tbody class="extractFields">
-        <tr class="extractField">
+        <tbody class="groupFields">
+        <tr class="groupField">
             <td style="width: 30%;"><select class="field auto_save"></select></td>
             <td>
                 <input class="alias auto_save" type="text"/>
