--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -216,14 +216,14 @@
                 <th>别名</th>
             </tr>
         </thead>
-        <tbody class="extractFields">
-            <tr class="extractField">
+        <tbody class="joinFields">
+            <tr class="joinField">
                 <td><select class="table auto_save"></select></td>
                 <td>
                     <select class="field auto_save"></select>
                 </td>
                 <td style="width: 32%"><input class="alias auto_save" type="text"/></td>
-                <td class="regulation"><span class="add extractAdd auto_save"></span><span class="lessen extractLessen auto_save"></span></td>
+                <td class="regulation"><span class="add joinAdd auto_save"></span><span class="lessen joinLessen auto_save"></span></td>
             </tr>
         </tbody>
     </table>
