--- a/html/pageFlow.html
+++ b/html/pageFlow.html
@@ -29,7 +29,7 @@
 				<img src="../images/icon_prev.png" alt="" data-tip="撤销"/>
 				<img src="../images/icon_next.png" alt="" data-tip="恢复"/>
 				<img src="../images/icon_fresh.png" alt="" id="page-fresh" data-tip="刷新"/>
-				<img src="../images/icon_preview.png" alt="" data-tip="预览"/>
+				<img src="../images/icon_preview.png" alt="" id="page-preview"  data-tip="预览"/>
 			</div>
 			<div class="drag-bar clearfix">
 				<div class="op-box1 op-box"></div>
