--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             			<video  poster="https://assets.megvii.com/static%2Fimages/home/megvii_video-7a23aa4a33.jpg" autoplay="autoplay" id="video1" loop="loop">
 				          <source src="plugin/website_main_bg.mp4" type="video/mp4">
 				        </video>
+						<img src="https://assets.megvii.com/static%2Fimages/home/megvii_video-7a23aa4a33.jpg" style="opacity: 0; z-index: -1;">
             		</div>
             		<h1 class="title">大数据平台精准服务</h1>
     				<a href="main.html" class="xdbd-btn">点击进入</a>
