--- a/html/biTemplet.html
+++ b/html/biTemplet.html
@@ -40,7 +40,7 @@
         <dl class="new_demand" id="new_demand_btn">
             <dt><img src="../images/wendang_xinjian.png"></dt>
             <dd>
-                <p>新建BI模板</p>
+                <p>新建BI</p>
                 <span></span>
             </dd>
         </dl>
