--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -511,7 +511,7 @@
             }),
             success:function(data){
               if(data.code == 0) {
-               alert(data)
+               // alert(data)
                 this_actionId = data.data.actionId;
                 this_isTemplate = false;
                 init_actionComp();
