--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -127,11 +127,11 @@
                 <th>显示名称</th>
             </tr>
         </thead>
-        <tbody class="extractFields">
-            <tr class="extractField">
+        <tbody class="outputFields">
+            <tr class="outputField">
                 <td style="width: 40%;"><select class="field auto_save"></select></td>
                 <td style="width: 40%;"><input class="alias auto_save" type="text" /></td>
-                <td class="regulation"><span class="add extractAdd auto_save"></span><span class="lessen extractLessen auto_save"></span></td>
+                <td class="regulation"><span class="add outputAdd auto_save"></span><span class="lessen outputLessen auto_save"></span></td>
             </tr>
         </tbody>
     </table>
