--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -51,7 +51,7 @@
       var this_data = {};
       var this_delete = true; //新建
       var onenv = true;
-      var $url = '';  //../xdbd-wf
+      var $url = '../xdbd-wf';  //../xdbd-wf
       console.log(this_onenv)
 
       if(this_onenv == 'dev') {
