--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -49,7 +49,7 @@
       var this_actionCompName;
       var this_actionComp = '';
       var this_data = {};
-      var this_delete = true; //新建
+      var this_new = true; //新建
       var onenv = true;
       var $url = '../xdbd-wf';  //../xdbd-wf
       console.log(this_onenv)
@@ -170,8 +170,11 @@
           };
           //新建流程图
           demo.onBtnNewClick = function () {
-            this_delete = false;
-            demo.clearData();
+            if(this_new) {
+              layer.msg('请先保存流程图',{time: 1000})
+            } else {
+              window.location.href = 'stencilmanage.html';
+            }
           };
           //保存流程图
           demo.onBtnSaveClick = function () {
@@ -194,6 +197,7 @@
               success: function (data) {
                 console.log(data)
                 if (data.code == 0) {
+                  this_new = false;
                   layer.msg('保存成功',{time: 1000});
                   setTimeout(function() {
                     location.reload();
