--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -180,11 +180,11 @@
 									</div>
 									<div class="m-navscont1">
 										<div class="m-lsetnav-btns">
-											<img src="../images/t_add.png" alt="" class="le-add"/>
-											<img src="../images/t_up.png" alt="" class="le-up"/>
-											<img src="../images/t_down.png" alt="" class="le-down"/>
-											<img src="../images/icon_close_02.png" alt="" class="le-close"/>
-											<img src="../images/icon_sxp.png" alt="" class="le-clear"/>
+											<img src="../images/t_add.png" alt="" class="le-add opt-tip" data-tip="添加"/>
+											<img src="../images/t_up.png" alt="" class="le-up opt-tip" data-tip="上移"/>
+											<img src="../images/t_down.png" alt="" class="le-down opt-tip" data-tip="下移"/>
+											<img src="../images/icon_close_02.png" alt="" class="le-close opt-tip" data-tip="删除"/>
+											<img src="../images/icon_sxp.png" alt="" class="le-clear opt-tip" data-tip="清空"/>
 										</div>
 										<div class="m-scroll-navs">
 											<div class="swiper-container">
