--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -200,7 +200,7 @@
                 </select>
             </td>
             <td><select class="field2 auto_save"></select></td>
-            <td class="regulation"><span class="add onAdd auto_save"></span><span class="lessen onLessen auto_save"></span></td>
+            <td class="regulation"><span class="add joinsAdd auto_save"></span><span class="lessen joinsLessen auto_save"></span></td>
         </tr>
         </tbody>
     </table>
